# backtest-honesty-toolkit

./: README.md  pyproject.toml
docs/: HONESTY_MODEL.md
examples/: audit_example.py
src/backtest_honesty/: __init__.py  audit.py  chronology.py  costs.py  fills.py  ledger.py
tests/: test_audit.py  test_chronology.py  test_costs.py  test_fills.py  test_ledger.py
